# django-social-website

./: .gitignore  Procfile  README.md  jscode.js  manage.py  pyproject.toml  pyproject2.toml  requirements.txt
Bookmarks/: asgi.py  cert.crt  cert.key  db.sqlite3  settings.py  urls.py  wsgi.py
Bookmarks/Bookmarks/: settings.py  urls.py
Bookmarks/account/: views.py
Bookmarks/images/: admin.py  models.py  urls.py
account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact.py  0003_rename_user_form_contact_user_from.py
account/templates/: base.html
accounts/: admin.py  authentication.py  emails.py  forms.py  tokens.py  urls.py  views.py
action/: admin.py  apps.py  models.py  urls.py  utils.py
action/migrations/: 0001_initial.py
common/: stubs.py
images/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_remove_image_images_imag_created_380b1a_idx_and_more.py  0003_remove_image_images_imag_created_62db75_idx_and_more.py  0004_image_total_views.py
images/templates/: bookmarklet_launcher.js
static/css/: base.css  styles.css
static/js/: anchorAction.js  bookmarklet.js  close_button.js  darkmode.js  email_validation.js  image_like.js  paginator.js  user_follow.js
templates/: base.html  bookmarklet_launcher.js
templates/account/: dashboard.html  edit.html  edit_new_profile.html  email_validation.html  email_validation_confirm.html  email_validation_invalid.html  email_validation_page.html  login.html  register.html  (+2 more)
(+44 files in other folders)
