[project]
name = "social-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django==5.1.2",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "easy-thumbnails>=2.10",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "social-auth-app-django>=5.4.3",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
dj-extras = [
    "django-stubs>=5.1.3",
    "django-types>=0.20.0",
]
