[project]
name = "social-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.0",
    "dj-database-url>=2.3.0",
    "django==5.1.2",
    "django-allauth[socialaccount]>=65.8.0",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "reportlab>=4.4.0",
    "svglib>=1.5.1",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
dj-extras = [
    "django-stubs>=5.1.3",
    "django-types>=0.20.0",
]

[dependency-groups]
dev = [
    "django-livereload-server>=0.5.1",
    "ipython>=9.2.0",
    "pyopenssl>=25.0.0",
    "werkzeug>=3.1.3",
]
